# MAI-OS

./: README.md
laba1/: CMakeLists.txt  Лаба1-Стрельников-214.docx
laba1/src/: child.c  parent.c
laba2/: CMakeLists.txt  Лаба2-Стрельников-214.docx
laba2/src/: main.c
laba3/: CMakeLists.txt  Лаба3-Стрельников-214.docx
laba3/src/: child.c  parent.c
laba4/: CMakeLists.txt  Лаба4-Стрельников-214.docx
laba4/include/: libs.h
laba4/src/: lib1.c  lib2.c  programm1.c  programm2.c
